--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
            <img src="img/logo.png" alt="logo">
            
            <nav>
+               <a href="#">HOME</a>
                <a href="#">FRONT-END</a>
                <a href="#">BACK-END</a>
                <a href="#">MOBILE</a>
